--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@ The following enables an decision manager execution server whose undertow web se
 . Initialize the template:
 +
 -----
-$ oc create -f resources/ng-mortgage-bpmsuite70-full-mysql.yaml
+$ oc create -f resources/rhdm7-full-ng.yaml
 -----
 
 . Create a keystore for execution server
